platform/alv/pet-clinic-alv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: spring-petclinic
  name: spring-petclinic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-petclinic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-petclinic
        app.kubernetes.io/part-of: spring-petclinic
        tanzu.app.live.view: "true"
        tanzu.app.live.view.application.name: petclinic-liveview
    spec:
      imagePullSecrets: 
      - name: imagereg-secret
      containers:
      - image: dektregistry.azurecr.io/dekt-apps/spring-petclinic:2.4.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 15
        name: app
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 15
